--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.format_sql=true
+
 
 # JPA Log
 logging.level.org.hibernate.SQL=DEBUG
