--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 # JPA Log
 logging.level.org.hibernate.SQL=DEBUG
