--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 file.dir=/Users/donghyun/Desktop/Study/file/
 
+jwt.secret= VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+
+
 
