add : post Api 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,16 @@ file.dir=/Users/donghyun/Desktop/Study/file/
 
 jwt.secret= VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
 
+# multipart ??
+spring.servlet.multipart.max-file-size: 100MB
+spring.servlet.multipart.max-request-size: 100MB
+
+# aws ??
+# ??? S3 bucket region ??
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+cloud.aws.credentials.accessKey=AKIAXW4DDD5LZVSY3PXQ
+cloud.aws.credentials.secretKey=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
+
 
 
