--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.profiles.active=local
 spring.datasource.url=jdbc:h2:tcp://localhost/~/board
 spring.datasource.username=sa
 spring.datasource.password=
+spring.devtools.restart.enabled = false
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
