add : 로그아웃 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,9 @@ cloud.aws.credentials.accessKey=AKIAXW4DDD5LZVSY3PXQ
 cloud.aws.credentials.secretKey=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
 
 
+// redis
+spring.redis.host = localhost
+spring.redis.port = 6379
+
+
 
