--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.devtools.restart.enabled = false
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.format_sql=true
 
 
@@ -23,7 +23,6 @@ spring.servlet.multipart.max-file-size: 100MB
 spring.servlet.multipart.max-request-size: 100MB
 
 # aws ??
-# ??? S3 bucket region ??
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.credentials.accessKey=AKIAXW4DDD5LZVSY3PXQ
